<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TrackiT Parent</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section2">Device Details</string>
    <string name="title_section1">Map View</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
     <string name="menu_save">Save</string>
    <string name="login_button_text">Login</string>
    <string name="authentication">authentication</string>
    <string name="gcm_project_id">714729619832</string>
    <string name="menu_text">"Options"</string>
    <string name="checkbox1_text">"Show live position"</string>
    <string name="checkbox_freeform">"Enable freeform drawing"</string>
    <string name="loc_update_broadcast_action">TrackiTLoc</string>
    <string name="marker_update_broadcast_action">TrackiTMarker</string>
    <string name="device_delete_broadcast_action">DeviceDelete</string>
    <string name="reload_button_text">Reload Devices</string>
    <string name="save_button_text">Save Devices</string>
    <string name="savegroup_button_text">Save Group</string>
    <string name="saveradial_button_text">Save Geofence</string>
    <string name="addgeofence_button_text">Add Geofence</string>
    <string name="delete_marker">Delete Marker</string>
    <string name="delete_group">Delete Group</string>
    
	    
    <string name="server_root">https://jamescross91.dyndns.tv:2610</string>
    <string name="vpn_root">http://25.126.59.12:2610</string>
    <string name="login_url">/device/parent/login</string>
    <string name="geofence_save_url">/device/parent/geofence/save</string>
    <string name="geofence_delete_url">/device/parent/geofence/delete</string>
    <string name="geofence_load_url">/device/parent/geofence/load</string>
    <string name="convex_load_url">/device/parent/convex/load</string>
    <string name="convex_delete_url">/device/parent/convex/delete</string>
    <string name="convex_save_url">/device/parent/convex/save</string>
    <string name="gcm_update_url">/device/gcm/update</string>
    <string name="location_load_url">/device/parent/location/load</string>
    
    <string name="altitude_string">Altitude:</string>
    <string name="battery_string">Battery %: </string>
    <string name="ischarging_string">Device is charging: </string>
    <string name="bearing_string">Bearing: </string>
    <string name="dataconnection_string">Connection: </string>
    <string name="velocity_string">Velocity: </string>
    <string name="longitude_string">Longitude: </string>
    <string name="latitude_string">Latitude: </string>
    <string name="locationsource_string">Loc source: </string>
    <string name="accuracy_string">Accuracy:</string>
    <string name="network_string">Cell Network: </string>
    
    

</resources>